# RAG_concept

./: README.md  main.py  pyproject.toml  requirment.txt
1-DataIngestionParsing/: 0-DataIntestion.ipynb  1-DataIngestionforPdf.ipynb  1-DataParsingPdf.ipynb  2-DataParsingDoc.ipynb  3-DataParsingCsv&Excel.ipynb  4-DataParsingJson.ipynb
1-DataIngestionParsing/data/structured_files/: inventory.xlsx  products.csv
1-DataIngestionParsing/data/text_files/: Machine_learning.txt  python_intro.txt
1-DataIngestionParsing/data/word_files/: AI_agent.docx
