[project]
name = "rag-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.3",
    "docx2txt>=0.9",
    "faiss-cpu>=1.12.0",
    "ipy>=1.1",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "kernel>=0.18.0",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.3",
    "langchain-groq>=1.0.0",
    "langchain-openai>=1.0.2",
    "langchain-text-splitters>=1.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfminer>=20191125",
    "pymupdf>=1.26.6",
    "pypdf>=6.1.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "tiktoken>=0.12.0",
    "unstructured[docx]>=0.18.15",
]
